--- a/src/i18n/ne.json
+++ b/src/i18n/ne.json
@@ -6,7 +6,7 @@
   "nav_ENG": "ENG",
   "nav_Home": "गृह",
   "nav_Symptoms": "लक्षण",
-  "nav_JoinUs": "हामीसँग सामेल हुनुहोस्",
+  "nav_JoinUs": "स्वयंसेवक बन्नुहोस्",
   "nav_GovNotice": "सरकारी सूचना",
   "nav_Cases": "घटनाहरु",
 
