--- a/src/i18n/ne.json
+++ b/src/i18n/ne.json
@@ -2,7 +2,7 @@
   "nav_HelpUsKeepDataReliable": "भरपर्दो सूचनाको लागि मद्दत गर्नुहोस ! गलत सूचना, नयाँ खबर र तथ्याड़क को जानकारी दिनुहोस ! ",
   "nav_covid19": "कोभीड-१९",
   "nav_Nepal": "नेपाल",
-  "nav_NEP": "नेपाली",
+  "nav_NEP": "NEP",
   "nav_ENG": "ENG",
   "nav_Home": "गृह",
   "nav_Symptoms": "लक्षण",
