nepali static translation changes

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -100,7 +100,7 @@
   "symCh_Mild": "Mild",
 
   "join_openSource": "Open Source Platform for COVID-19 for Nepal",
-  "join_askingAllLikeMinded": "<1>covidnepal.org</1> is an Open Source Platform started at <3>Fusemachines</3> and asking all like minded citizens of Nepal to join in this effort to create an Open Source platform to serve as a reliable source of information about Covid-19 in Nepal.<5>Let’s fight this pandemic together!</5>",
+  "join_askingAllLikeMinded": "is an Open Source Platform started at <1>Fusemachines</1> and asking all like minded citizens of Nepal to join in this effort to create an Open Source platform to serve as a reliable source of information about Covid-19 in Nepal.<3></3>Let’s fight this pandemic together!",
   "join_objective": "Objective",
   "join_objectiveDetail_1": "Collect reliable data from various trusted sources, so public can stay well informed and leverage that data to better manage their fight with this pandemic.",
   "join_objectiveDetail_2": "Make relevant data easily consumable to get right information quickly, so informed decisions can be made during time of panic, should there be one.",
