nepali translate changes

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -75,6 +75,8 @@
   "sym_WearMasks": "Wear Masks",
   "sym_WashYourHands": "Wash your Hands",
   "sym_SocialDistancing": "Social Distancing",
+  "sym_SometimeChildren": "Sometimes for children",
+  "sym_sourcesFooter": "Sources: CDC, WHO, American College of Allergy, Asthma and Immunology",
 
   "0": "0",
   "1": "1",
