--- a/src/i18n/locale.json
+++ b/src/i18n/locale.json
@@ -74,6 +74,8 @@
   "sym_WearMasks": "sym_WearMasks",
   "sym_WashYourHands": "sym_WashYourHands",
   "sym_SocialDistancing": "sym_SocialDistancing",
+  "sym_SometimeChildren": "sym_SometimeChildren",
+  "sym_sourcesFooter": "sym_sourcesFooter",
 
 
 
