nepali translation changes

--- a/src/i18n/ne.json
+++ b/src/i18n/ne.json
@@ -109,7 +109,7 @@
 
 
   "join_openSource": "नेपालका लागि कोभीड-१९ खुला स्रोत प्लेटफर्म",
-  "join_askingAllLikeMinded": "एक खुला स्रोत प्लेटफर्म हो जुन <1>फ्युजमसिन्स</1> द्वरा सुचारु गरिएको हो। नेपालमा देखिएका सम्पूर्ण कोभिड-१९का केसहरुको बारेमा विश्वसनीय जानकारीको स्रोतका रूपमा खुला स्रोत प्लेटफर्म बनाउनको लागि यस प्रयासमा सामेल हुन नेपालका सबै समान विचारधाराका नागरिकहरूलाई हामी आग्रह गर्दछौं।<3></3>यो महामारीको बिरूद्ध सँगै लडौं !",
+  "join_askingAllLikeMinded": "एक खुला स्रोत प्लेटफर्म हो जुन <1>फ्युजमसिन्स</1> द्वरा सुचारु गरिएको हो। नेपालमा देखिएका सम्पूर्ण कोभिड-१९का घटनाहरुको बारेमा विश्वसनीय जानकारीको स्रोतका रूपमा खुला स्रोत प्लेटफर्म बनाउनको लागि यस प्रयासमा सामेल हुन नेपालका सबै समान विचारधाराका नागरिकहरूलाई हामी आग्रह गर्दछौं।<3></3>यो महामारीको बिरूद्ध सँगै लडौं !",
   "join_objective": "उद्देश्य",
   "join_objectiveDetail_1": "विभिन्न विश्वसनीय र आधिकारिक स्रोतहरूबाट सङ्कलन गरिएको तत्थ्याङ्क मार्फत सम्पूर्ण नेपाली जनताले सही सुचना पाओस र यो महामारीको विरुद्ध सुदृढ र सफलताका साथ लडुन्  ! ",
   "join_objectiveDetail_2": "प्रासंगिक तत्थ्याङ्कहरूआम जनाताले सजिलै उपभोग गर्न सकुन ताकी कुनै आपतकालिन अवस्था आइपरेको खण्ड्मा सही निर्णय लिन सकुन।",
