new notices added

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -124,6 +124,7 @@
 
   "notic_governNotice": "Government Notices",
   "notic_resources": "Resources",
+  "notic_support": "Other Covid-19 Supports",
   "notic_reports": "Reports",
   "notic_pressRelease": "Press Release",
   "notic_pressRelease21March": "Press Release as of 21 March 2020",
