--- a/src/i18n/locale.json
+++ b/src/i18n/locale.json
@@ -126,6 +126,7 @@
 
   "notic_governNotice": "notic_governNotice",
   "notic_resources": "notic_resources",
+  "notic_support": "notic_support",
   "notic_pressRelease": "notic_pressRelease",
   "notic_reports": "notic_reports",
   "notic_pressRelease21March": "notic_pressRelease21March",
