--- a/src/i18n/locale.json
+++ b/src/i18n/locale.json
@@ -8,6 +8,7 @@
   "nav_Symptoms": "nav_Symptoms",
   "nav_JoinUs": "nav_JoinUs",
   "nav_GovNotice": "nav_GovNotice",
+  "nav_News": "nav_News",
   "nav_Cases": "nav_Cases",
 
   "com_EmergencyContact": "com_EmergencyContact",
